--- a/client/src/components/Login/login.css
+++ b/client/src/components/Login/login.css
@@ -1,11 +1,11 @@
-#background {
+/* body {
     display: flex;
     flex-direction: column;
-    /* background: url("../../assets/images/blueInkBackground.jpg") no-repeat center center fixed; */
+    background: url("../../assets/images/blueInkBackground.jpg") no-repeat center center fixed;
     height: 100%;
     width: 100%;
     background-size: cover;
-}
+} */
 
 .z-depth-1.grey.lighten-4.row {
     display: inline-block; 
