--- a/client/src/components/Register/register.css
+++ b/client/src/components/Register/register.css
@@ -1,22 +1,12 @@
-/* body {
+#registerBackground {
     display: flex;
-    min-height: 100vh;
+    height: 100vh;
     flex-direction: column;
-    background-image: url("../../assets/images/blueInkBackground.jpg") !important;
-    background-repeat: no-repeat !important;
-    height: 100% !important;
-    background-position: center !important;
-    background-repeat: no-repeat !important;
-    background-size: cover !important;
-    background: #fff;
-}
-
-a, b, h5 {
-    color: #000080;
-}
-
-div.container {
-    margin-top: 50px;
+    background-image: url("../../assets/images/blueInkBackground.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .z-depth-1.grey.lighten-4.row {
